--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    
     <title>Pagina Wordpress</title>
 </head>
 <body>
@@ -19,7 +25,17 @@
 
             </div>
 
-            <nav id="menu">
+            <!-- menu -->
+            <nav>
+                <ul id="menu">
+                    <li> <a href="#">FEATURES</a></li>
+                    <li> <a href="#">EDITORIALS</a></li>
+                    <li> <a href="#">ENVIRONMENT</a></li>
+                    <li> <a href="#">BLOG</a></li>
+                    <li> <a href="#">SHOP</a></li>
+                    <li> <a href="#">CONTACT</a></li>
+
+                </ul>
 
             </nav>
 
