jumbotron banner ok

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
         <!-- jumbotron section -->
         <div id="jumbotron">
+            <!-- altra soluzione per inserire l'img nel jumbotron -->
+            <!-- <img src="img/banner.jpg" alt="meditation banner"> -->
 
         </div>
 
