--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         <div id="jumbotron">
             <!-- altra soluzione per inserire l'img nel jumbotron -->
             <!-- <img src="img/banner.jpg" alt="meditation banner"> -->
+            <div id="bannertext">
+                Pretium ac placeram dui interdum nunc in eros urna morbi
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nostrum, velit ullam perspiciatis quaerat molestias aliquid, voluptatum, porro dignissimos...</p>
+                
+
+            </div>
 
         </div>
 
